--- a/src/components/NavLeft/index.less
+++ b/src/components/NavLeft/index.less
@@ -2,10 +2,14 @@
 .logo {
     line-height: 90px;
     padding-left: 20px;
+    background-color: #001529;
     img {
         height: 35px;
     }
     h1 {
+        margin: 0 0 0 10px;
+        display: inline-block;
+        vertical-align: middle;
         color: #fff;
         font-size: 20px;
     }
