--- a/src/style/common.less
+++ b/src/style/common.less
@@ -3,6 +3,7 @@
     .nav-left {
         color: #fff;
         height: calc(100vh);
+        background: #001529;
     }
     .main {
         // flex: 1;
