--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -1,27 +1,41 @@
-
 .header {
-    .header-top {
-      height: 60px;
-      line-height: 60px;
-      padding: 0 20px;
-      text-align: right;
-      a {
-          margin-left: 40px;
-      }
+  .header-top {
+    height: 60px;
+    line-height: 60px;
+    padding: 0 20px;
+    text-align: right;
+    a {
+      margin-left: 40px;
     }
-    .breadcrumb {
-      height: 40px;
-      line-height: 40px;
-      padding: 0 20px;
-      border-top: 1px solid #1890ff;
-      .breadcrumb-title {
-        text-align: center;
+  }
+  .breadcrumb {
+    height: 40px;
+    line-height: 40px;
+    padding: 0 20px;
+    border-top: 1px solid #1890ff;
+    .breadcrumb-title {
+      text-align: center;
+    }
+    .weather {
+      font-size: 14px;
+      text-align: right;
+      .date {
+        margin-right: 10px;
+        vertical-align: middle;
       }
-      .weather {
-        text-align: right;
-        .date {
-          margin-right: 10px;
+      .weather-img {
+        margin-right: 10px;
+        img {
+          height: 15px;
         }
       }
+      .weather-PM {
+        vertical-align: middle;
+      }
+      .weather-detail {
+        margin-left: 5px;
+        vertical-align: middle;
+      }
     }
+  }
 }
