--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -1,4 +1,6 @@
+@import './../../style/default.less';
 .header {
+  background: @colorM;
   .header-top {
     height: 60px;
     line-height: 60px;
@@ -14,7 +16,17 @@
     padding: 0 20px;
     border-top: 1px solid #1890ff;
     .breadcrumb-title {
+      font-size: @fontC;
       text-align: center;
+      &:after {
+        position: absolute;
+        content: '';
+        left: 77px;
+        top: 39px;
+        border-top: 9px solid @colorM;
+        border-left: 12px solid transparent;
+        border-right: 12px solid transparent;
+      }
     }
     .weather {
       font-size: 14px;
