--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1,4 +1,6 @@
 
+@import './default.less';
+
 .container {
     .nav-left {
         color: #fff;
@@ -6,8 +8,8 @@
         background: #001529;
     }
     .main {
-        // flex: 1;
         height: calc(100vh);
+        background: @colorL;
     }
     .content {
         position: relative;
