--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -16,12 +16,14 @@
     padding: 0 20px;
     border-top: 1px solid #1890ff;
     .breadcrumb-title {
+      position: relative;
       font-size: @fontC;
       text-align: center;
       &:after {
         position: absolute;
         content: '';
-        left: 77px;
+        left: 50%;
+        margin-left: -12px;
         top: 39px;
         border-top: 9px solid @colorM;
         border-left: 12px solid transparent;
