--- a/src/style/common.less
+++ b/src/style/common.less
@@ -8,6 +8,7 @@
         background: #001529;
     }
     .main {
+        overflow: auto;
         height: calc(100vh);
         background: @colorL;
     }
