--- a/src/components/NavLeft/index.less
+++ b/src/components/NavLeft/index.less
@@ -1,5 +1,6 @@
 
-.logo {
+.nav-left {
+  .logo {
     line-height: 90px;
     padding-left: 20px;
     background-color: #002140;
@@ -13,4 +14,5 @@
         color: #fff;
         font-size: 20px;
     }
+}
 }
