--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -6,6 +6,18 @@
     line-height: 60px;
     padding: 0 20px;
     text-align: right;
+    .logo {
+        line-height: 60px;
+         text-align: left;
+         font-size: 18px;
+        img {
+          height: 40px;
+          vertical-align: middle;
+        }
+        span {
+          margin-left: 5px;
+        }
+    }
     a {
       margin-left: 40px;
     }
@@ -51,5 +63,11 @@
         vertical-align: middle;
       }
     }
+  }
+}
+.simple-page{
+  .header-top{
+    background: #1890ff;
+    color: @colorM;
   }
 }
