--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1,7 +1,16 @@
 
 @import './default.less';
 @import './loading.less';
-
+ul,li{
+  list-style: none;
+}
+.clearfix{
+  &::after{
+    content: ' ';
+    clear: both;
+    visibility: hidden;
+  }
+}
 .container {
     .nav-left {
         color: #fff;
