--- a/src/pages/order/detail.less
+++ b/src/pages/order/detail.less
@@ -14,6 +14,7 @@
     }
     .detail-form{
       li{
+        .clearfix;
         margin:20px 0;
         line-height:20px;
         font-size:15px;
