--- a/src/pages/order/detail.less
+++ b/src/pages/order/detail.less
@@ -1,5 +1,8 @@
 @import '../../style/default';
 @import '../../style/common';
+.content {
+  padding: 50px;
+}
 .detail-items{
     margin-left:90px;
     padding:25px 50px 25px 0;
@@ -33,5 +36,5 @@
 }
 .order-map{
   height: 450px;
-  margin: 25px -31px 0;
+  margin: 25px -31px 0
 }
